force-app/main/default/objects/ContactPointPhone/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Updated</label>
    <type>DateTime</type>
</CustomField>