force-app/main/default/objects/ContactPointPhone/fields/DateAdded__c.field-meta.xml
<CustomField>
    <fullName>DateAdded__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Added</label>
    <type>DateTime</type>
</CustomField>