force-app/main/default/objects/ContactPointPhone/fields/HoursOffset__c.field-meta.xml
<CustomField>
    <fullName>HoursOffset__c</fullName>
    <label>Hours Offset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-12:00</fullName>
            </value>
            <value>
                <fullName>-11:00</fullName>
            </value>
            <value>
                <fullName>-10:00</fullName>
            </value>
            <value>
                <fullName>-09:30</fullName>
            </value>
            <value>
                <fullName>-08:00</fullName>
            </value>
            <value>
                <fullName>-07:00</fullName>
            </value>
            <value>
                <fullName>-06:00</fullName>
            </value>
            <value>
                <fullName>-05:00</fullName>
            </value>
            <value>
                <fullName>-04:00</fullName>
            </value>
            <value>
                <fullName>-03:30</fullName>
            </value>
            <value>
                <fullName>-03:00</fullName>
            </value>
            <value>
                <fullName>-02:00</fullName>
            </value>
            <value>
                <fullName>-01:00</fullName>
            </value>
            <value>
                <fullName>+/-00:00</fullName>
            </value>
            <value>
                <fullName>+01:00</fullName>
            </value>
            <value>
                <fullName>+02:00</fullName>
            </value>
            <value>
                <fullName>+03:00</fullName>
            </value>
            <value>
                <fullName>+03:30</fullName>
            </value>
            <value>
                <fullName>+04:00</fullName>
            </value>
            <value>
                <fullName>+04:30</fullName>
            </value>
            <value>
                <fullName>+05:00</fullName>
            </value>
            <value>
                <fullName>+05.30</fullName>
            </value>
            <value>
                <fullName>+06:00</fullName>
            </value>
            <value>
                <fullName>+06:30</fullName>
            </value>
            <value>
                <fullName>+07:00</fullName>
            </value>
            <value>
                <fullName>+08:00</fullName>
            </value>
            <value>
                <fullName>+08:45</fullName>
            </value>
            <value>
                <fullName>+09:00</fullName>
            </value>
            <value>
                <fullName>+09:30</fullName>
            </value>
            <value>
                <fullName>+10:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>