force-app/main/default/objects/ContactPointPhone/fields/IsPhoneForeign__c.field-meta.xml
<CustomField>
    <fullName>IsPhoneForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign?</label>
    <type>Checkbox</type>
</CustomField>