force-app/main/default/objects/ContactPointPhone/fields/LocalTime__c.field-meta.xml
<CustomField>
    <fullName>LocalTime__c</fullName>
    <label>LocalTime</label>
    <type>DateTime</type>
</CustomField>