force-app/main/default/objects/ContactPointPhone/fields/PhoneNote__c.field-meta.xml
<CustomField>
    <fullName>PhoneNote__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>