force-app/main/default/objects/ContactPointPhone/fields/PhonePrefix__c.field-meta.xml
<CustomField>
    <fullName>PhonePrefix__c</fullName>
    <label>Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>