force-app/main/default/objects/ContactPointPhone/fields/PhoneType__c.field-meta.xml
<CustomField>
    <fullName>PhoneType__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Land Line</fullName>
            </value>
            <value>
                <fullName>Main Business</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>