force-app/main/default/objects/ContactPointPhone/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AKDT</fullName>
            </value>
            <value>
                <fullName>AST/ADT</fullName>
            </value>
            <value>
                <fullName>ChST</fullName>
            </value>
            <value>
                <fullName>CHUT/KOST/PONT</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>HST</fullName>
            </value>
            <value>
                <fullName>MHT</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
                <default>true</default>
                <label>PST</label>
            </value>
            <value>
                <fullName>PWT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>